--- a/recipes/brigadeiro.html
+++ b/recipes/brigadeiro.html
@@ -1,5 +1,5 @@
 <h1>Brigadeiro</h1>
-<img src="./images/JF_24052_Brigadeiro_Shot_4x3_12852-ed2771d03b5643a9a4389d8128ed3341.jpg"
+<img src="./images/JF_24052_Brigadeiro_Shot_4x3_12852-ed2771d03b5643a9a4389d8128ed3341.jpg">
 <h2>Description</h2><p>Brigadeiro is a great Brazilian dessert similar to bonbons that's extremely scrumptious and delicious. This sweet is loved here in Brazil. Try it! You can also make it in the microwave; just remember to stir every minute.</p>
 <h2>Ingridients</h2><ul><li>1 can sweetened condensed milk</li><li>3 tablespoons undweetened cocoa</li><li>1 tablespoon butter</li></ul>
 <h2>Steps</h2><ul><li>Gather all ingredients.</li><li>Combine condensed mil, cooca and butter in a medium saucepan over medium heat. Cook and stir untile thinkened, about 10 minuts. Remkove from heat and let rest until miture is cool enough to handle.</li><li>Use you hands to hapi into small balls and place on a serving plate. Can be eaten at once or chiled until serving.</li></ul>
